{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 72,
  "lineage": "1eb9525a-46c3-b7a7-7710-19eb843401cb",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:internet-gateway/igw-186523af3c541f688",
            "id": "igw-186523af3c541f688",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-igw",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-igw",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:security-group/sg-6953e4b49a3ffc0ed",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-6953e4b49a3ffc0ed",
            "ingress": [],
            "name": "cloud-bank-lambda-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-lambda-sg",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-lambda-sg",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:security-group/sg-adde9078e937ff327",
            "description": "Security group for RDS database",
            "egress": [],
            "id": "sg-adde9078e937ff327",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Lambda only",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-6953e4b49a3ffc0ed"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-bank-rds-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-rds-sg",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-rds-sg",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.lambda",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:subnet/subnet-1cd8b82e331afa9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-1cd8b82e331afa9f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-private-subnet-1",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-private-subnet-1",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "private"
            },
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:subnet/subnet-d43f662a871d379c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-d43f662a871d379c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-private-subnet-2",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-private-subnet-2",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "private"
            },
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:subnet/subnet-dab9a8c5acc53784d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-dab9a8c5acc53784d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-public-subnet-1",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-public-subnet-1",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "public"
            },
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:subnet/subnet-44db9b439517da86f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-44db9b439517da86f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-public-subnet-2",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-public-subnet-2",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1",
              "Type": "public"
            },
            "vpc_id": "vpc-2e636e95d7d96c7a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:000000000000:vpc/vpc-2e636e95d7d96c7a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-20fd3ada2cda8dffe",
            "default_route_table_id": "rtb-b7d24e11ba6f616bf",
            "default_security_group_id": "sg-224230ebe031d0146",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-2e636e95d7d96c7a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-b7d24e11ba6f616bf",
            "owner_id": "000000000000",
            "tags": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-vpc",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            },
            "tags_all": {
              "Environment": "localstack",
              "ManagedBy": "terraform",
              "Name": "cloud-bank-vpc",
              "Project": "cloud-bank",
              "Region": "ap-southeast-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}